feat: header e banner

--- a/index.html
+++ b/index.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PreLúdia</title>
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    
+    <div class="banner">
+        <header>
+            <div class="container-grid">
+                <img src="img/logo.svg" alt="Logo da empresa PreLúdia">
+                <nav class="menu">
+                    <button><a href="#cases">Cases de Sucesso</a></button>
+                    <button><a href="#sobre">Quem somos</a></button>
+                    <button><a href="#contato">Contato</a></button>
+                </nav>
+            </div>
+        </header>
+        <div class="container-grid conteudo-banner">
+            <p>Quer conhecer nosso porfolio?</p>
+            <button>Jogar</button>
+        </div>
+    </div>
+
 </body>
+
 </html>
