--- a/index.html
+++ b/index.html
@@ -20,17 +20,44 @@
             <div class="container-grid">
                 <img src="img/logo.svg" alt="Logo da empresa PreLúdia">
                 <nav class="menu">
+                    <div class="um">
+                        <button><a href="#sobre">Quem somos</a></button>
+                    </div>
                     <button><a href="#cases">Cases de Sucesso</a></button>
-                    <button><a href="#sobre">Quem somos</a></button>
-                    <button><a href="#contato">Contato</a></button>
+                    <div class="dois">
+                        <button><a href="#contato">Contato</a></button>
+                    </div>
                 </nav>
             </div>
         </header>
         <div class="container-grid conteudo-banner">
+            <div class="filtro"></div>
             <p>Quer conhecer nosso porfolio?</p>
             <button>Jogar</button>
         </div>
     </div>
+    <section id="sobre">
+        <h2>Quem somos</h2>
+    </section>
+
+    <section class="container-grid" id="cases">
+        <h2>Cases de Sucesso</h2>
+    </section>
+    <div class="container-cards">    
+        </div>
+    </div>
+
+    <section id="contato">
+        <h2>Envie sua mensagem</h2>
+
+        <form>
+            <div class="campo">
+             
+            </div>
+
+
+        </form>
+    </section>
 
 </body>
 
