--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
                 <img src="img/logo.svg" alt="Logo da empresa PreLúdia">
                 <nav class="menu">
                     <div class="um">
-                        <button><a href="#sobre">Quem somos</a></button>
+                        <button>
+                            <a href="#sobre">Quem somos</a></button>
                     </div>
                     <button><a href="#cases">Cases de Sucesso</a></button>
                     <div class="dois">
@@ -38,6 +39,8 @@
     </div>
     <section id="sobre">
         <h2>Quem somos</h2>
+        <img src="img/Firefly dois homens 59198 1.png" alt="Personagem em pixel art">
+        <img src="img/Firefly dois homens 59198 2.png" alt="Personagem em pixel art">
     </section>
 
     <section class="container-grid" id="cases">
@@ -48,16 +51,44 @@
     </div>
 
     <section id="contato">
-        <h2>Envie sua mensagem</h2>
+        
 
         <form>
-            <div class="campo">
-             
+            <p>Envie sua mensagem</p>
+            <div class="campo um">
+                <input id="campo-nome" type="text" placeholder="Nome">
+                <input id="campo-email" type="email" name="" placeholder="Email">
             </div>
+            <div class="campo">
+                <input id="campo-assunto" type="text" placeholder="Assunto">
+            </div>
+            <div class="campo-textarea">
+                <textarea name="" id="campo-mensagem" cols="30" rows="10" placeholder="Digite sua mensagem..."></textarea>
+            </div>
+            <button type="submit">Enviar</button>
 
 
         </form>
     </section>
+
+    <footer>
+        <div class="container-grid">
+            <div class="redes-sociais">
+                <p>Nossas redes sociais</p>
+                <div class="icones-redes">
+                    <a href="#">
+                        <img src="img/linkedin.svg" alt="Linkedin">
+                    </a>
+                    <a href="#">
+                        <img src="img/twitter.svg" alt="Twitter">
+                    </a>
+                    <a href="#">
+                        <img src="img/instagram.svg" alt="instagram">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 </body>
 
