--- a/index.html
+++ b/index.html
@@ -20,46 +20,56 @@
             <div class="container-grid">
                 <img src="img/logo.svg" alt="Logo da empresa PreLúdia">
                 <nav class="menu">
-
-                    <button class="um">
-                        <a href="#sobre">Quem Somos</a>
-                    </button>
-
-                    <button><a href="#cases">Cases de Sucesso</a></button>
-
-                    <button class="dois">
-                        <a href="#contato">Contato</a>
-                    </button>
-
+                    <a href="#sobre">Quem Somos</a>
+                    <a class="especial" href="#cases">Cases de Sucesso</a>
+                    <a href="#contato">Contato</a>
                 </nav>
+                <button><svg xmlns="http://www.w3.org/2000/svg"viewBox="0 0 448 512"><path
+                d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z" />
+                </svg></button>
             </div>
         </header>
+
         <div class="container-grid conteudo-banner">
-            <p>Quer conhecer nossos projetos?</p>
+            <h1>Quer conhecer nossos projetos?</h1>
             <button><span><a href="#">Jogar</a></span>
             </button>
         </div>
     </div>
 
     <section id="sobre">
-
         <h2>Quem somos</h2>
-            <button>Player 1</button>
-            <div class="homem-um">
-                <img src="img/Firefly dois homens 59198 1.png" alt="Personagem em pixel art">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>    
-            </div>
 
-            <div class="container-sobre">
-                <button class="botao-dois">Player 2</button>
-            </div>
+        <div class="container-sobre-um">
+            <div class="quadrado-azul">
+                <button>Player 1</button>
 
-            <div class="homem-dois">
-                <img src="img/Firefly dois homens 59198 2.png" alt="Personagem em pixel art">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
-            </div>   
+                <div class="homem-um">
+                    <img src="img/homem_um.png" alt="Personagem em pixel art">
+                </div>
+            </div>
+            <p>A prelúdia surgiu da idealização de dois “players”, Thiago e Tadeu, que decidiram tornar tarefas
+                monótonas em dinâmicas lúdicas</p>
+        </div>
+
+        <div class="container-sobre">
+            <div class="quadrado-laranja">
+                <button>Player 2</button>
+
+                <div class="homem-dois">
+                    <img src="img/homem_dois.png" alt="Personagem em pixel art">
+                </div>
+            </div>
+            <p class="p-laranja">Nossa empresa realiza serviços no ramo da gamificação, ou seja, tornamos os processos
+                lúdicos. Desenvolvemos dinâmicas com características presentes em jogos a fim de incentivar pessoas, e
+                trazer melhores resultados no alcance de objetivos</p>
+        </div>
+
     </section>
-
+    <div class="chamada">
+        <h3>Despertou sua curiosidade sobre nossos projetos?</h3>
+        <a href="#cases">Veja nossos cases de sucesso!</a>
+    </div>
 
 
     <section class="container-grid" id="cases">
@@ -68,29 +78,45 @@
         <div class="container-cards">
             <div class="container">
                 <img src="img/bagunca.png" alt="" class="image">
-                <div class="overlay">aaaaaaaaaaaaaaLorem ipsum dolor sit amet. Et totam quaerat sed eaque nostrum sit vitae culpa cum corporis voluptas non nostrum adipisci. Sed enim aliquid et ducimus facere sit incidunt dicta aut quas expedita id vitae voluptas et tempore cupiditate sed animi debitis. Qui quos voluptatem vel molestiae nobis ut dolor galisum quo modi iusto et distinctio cupiditate aut recusandae harum est tenetur eius!                  
-                 </div>
+                <div class="overlay">
+                    <h3>Desorganização no ambiente de trabalho</h3>
+                    <p>Os funcionários de uma empresa mantinham a falta de organização com o ambiente </p>
+                    <h3>Solução</h3>
+                    <p>Desenvolvemos uma dinâmica em que os jogadores acumulavam pontos na realização de tarefas de
+                        limpeza, os prêmios eram entregues mensalmente</p>
+                </div>
             </div>
 
             <div class="container">
                 <img src="img/carro.png" alt="" class="image">
-                <div class="overlay">aaaaaaaaaaaaaaLorem ipsum dolor sit amet. Et totam quaerat sed eaque nostrum sit vitae culpa cum corporis voluptas non nostrum adipisci. Sed enim aliquid et ducimus facere sit incidunt dicta aut quas expedita id vitae voluptas et tempore cupiditate sed animi debitis. Qui quos voluptatem vel molestiae nobis ut dolor galisum quo modi iusto et distinctio cupiditate aut recusandae harum est tenetur eius!                  
+                <div class="overlay">
+                    <h3>Resultados insatisfatórios em vendas</h3>
+                    <p>Uma concessionária não alcançava metas estabelecidas por falta de conhecimento em veículos</p>
+                    <h3>Solução</h3>
+                    <p>Nossa empresa desenvolveu um quiz competitivo com perguntas frequentes dos clientes, estimulando
+                        os funcionários no alcance de prêmios e mais vendas</p>
                 </div>
             </div>
 
             <div class="container">
                 <img src="img/alunos.png" alt="" class="image">
-                <div class="overlay">aaaaaaaaaaaaaaLorem ipsum dolor sit amet. Et totam quaerat sed eaque nostrum sit vitae culpa cum corporis voluptas non nostrum adipisci. Sed enim aliquid et ducimus facere sit incidunt dicta aut quas expedita id vitae voluptas et tempore cupiditate sed animi debitis. Qui quos voluptatem vel molestiae nobis ut dolor galisum quo modi iusto et distinctio cupiditate aut recusandae harum est tenetur eius!                  
+                <div class="overlay">
+                    <h3>Baixo desempenho escolar</h3>
+                    <p>Uma escola não alcançou as metas previstas nas provas da OBMEP</p>
+                    <h3>Solução</h3>
+                    <p>Nossa empresa desenvolveu um quiz interativo, conectando alunos de diferentes redes escolares a
+                        rankings semanais</p>
                 </div>
             </div>
         </div>
     </section>
-    
 
+    <div class="chamada">
+            <h3>Se interessou por nossos trabalhos?</h3>
+            <p>Entre em contato com a gente!<p>
+    </div>
 
     <section id="contato">
-        <h2>Contato</h2>
-
         <form>
             <p>Envie sua mensagem</p>
             <div class="campo um">
@@ -127,7 +153,6 @@
             </div>
         </div>
     </footer>
-
 </body>
 
 </html>
