feat: responsividade (atualizacao)

--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
                     <img src="img/homem_um.png" alt="Personagem em pixel art">
                 </div>
             </div>
-            <p>A prelúdia surgiu da idealização de dois “players”, Thiago e Tadeu, que decidiram tornar tarefas
-                monótonas em dinâmicas lúdicas</p>
+            <p>A PreLúdia surgiu da idealização de dois “players”, Thiago e Tadeu, que decidiram tornar tarefas monótonas em dinâmicas lúdicas</p>
         </div>
 
         <div class="container-sobre">
@@ -60,17 +59,15 @@
                     <img src="img/homem_dois.png" alt="Personagem em pixel art">
                 </div>
             </div>
-            <p class="p-laranja">Nossa empresa realiza serviços no ramo da gamificação, ou seja, tornamos os processos
-                lúdicos. Desenvolvemos dinâmicas com características presentes em jogos a fim de incentivar pessoas, e
-                trazer melhores resultados no alcance de objetivos</p>
+            <p class="p-laranja">Nossa empresa realiza serviços no ramo da gamificação, ou seja, nós tornamos os processos lúdicos. 
+             Desenvolvemos dinâmicas com mecanismos presentes em jogos com o intuito de incentivar pessoas, e trazer melhores resultados no alcance de objetivos</p>
         </div>
-
     </section>
+    
     <div class="chamada">
         <h3>Despertou sua curiosidade sobre nossos projetos?</h3>
         <a href="#cases">Veja nossos cases de sucesso!</a>
     </div>
-
 
     <section class="container-grid" id="cases">
         <h2>Cases de Sucesso</h2>
@@ -111,7 +108,7 @@
         </div>
     </section>
 
-    <div class="chamada">
+    <div class="chamada-dois">
             <h3>Se interessou por nossos trabalhos?</h3>
             <p>Entre em contato com a gente!<p>
     </div>
@@ -132,7 +129,6 @@
             </div>
             <button type="submit">Enviar</button>
         </form>
-
     </section>
 
     <footer>
@@ -154,5 +150,4 @@
         </div>
     </footer>
 </body>
-
 </html>
